@@ -1,3 +1,9 @@
+2010-02-28  Noel O'Boyle
+
+	* test/testunique.py: Implement Chris' tests for --unique
+	* test/files/dupset.smi: Remove file as these test cases are included
+	in the Python script
+
 2010-02-28  Chris Morley
 
     * src/ops/unique.cpp: Make header file for unordered_map
